--- a/app/site/site_templates/addEntry.html
+++ b/app/site/site_templates/addEntry.html
@@ -5,16 +5,19 @@
     <div class="container my-md-5">
         <div class="row">
             <div class="d-md-flex">
-                <h1 class="col text-center pb-5 fs-1">New Journal Entry</h1>
+                <h1 class="col text-center fs-1">Journal Entries</h1>
             </div>
         </div>
     </div>
 </section>
 <section>
-    <div class="container my-md-5">
+    <div class="container my-2">
         <div class="row">
-            <div class="p-3">
-                {% include 'addEntryform.html' %}
+            <div class="d-md-flex">
+                <h3 class="col text-center p-2">New Journal Entry</h3>
+                <div class="container col-lg-6">
+                    {% include 'signupform.html' %}
+                </div>
             </div>
         </div>
     </div>
