use js to add api generated motivational/inspirational quote

--- a/app/site/site_templates/index.html
+++ b/app/site/site_templates/index.html
@@ -12,8 +12,7 @@
     </div>
     <div class="container my-md-5">
         <div class="row">
-            <div class="d-md-flex">
-                <p class="col text-center py-3 fs-5">"It's gonna get harder before it gets easier. But it will get better, you just gotta make it through the hard stuff first."</p>
+            <div id="inspiration">
             </div>
         </div>
     </div>
