--- a/app/site/site_templates/profile.html
+++ b/app/site/site_templates/profile.html
@@ -14,32 +14,39 @@
         </div>
     </section>
     <section>
-        <div class="container row">
-            <div class="col-md-4 mx-auto">
+        <div class="d-md-flex justify-content-md-evenly mx-lg-5">
+            <div id="user-details-container" class="col-md-5">
                 <div class="user-details text-center">
                     <div id="user-name">
                         <h4>Name {{username}}</h4>
                     </div>
                 </div>
-                <div class="auth-details">
-                    <h5>Token: {{ current_user.token }}</h5>
-                    <h5>id: {{ current_user.id }}</h5>
-                    <div id="user-username">
-                        <h5>Username: {{ current_user.username }}</h5>
+                <div class="auth-details f-flex flex-row">
+                    <div class="auth-details-items">
+                        <h5>Token: </h5>
+                        <p>{{ current_user.token }}</p>
+                        <h5>id: </h5>
+                        <p>{{ current_user.id }}</p>
+                        <div id="user-username" class="d-flex">
+                            <h5>Username: </h5>
+                            <p>{{ current_user.username }}</p>
+                        </div>
+                        <div id="user-email" class="d-flex">
+                            <h5>Email: </h5>
+                            <p>{{ current_user.email }}</p>
+                        </div>
+                        <div id="user-password" class="d-flex">
+                            <h5>Password</h5>
+                            <p>*****</p>
+                        </div>
                     </div>
-                    <div id="user-email">
-                        <h5>Email: {{ current_user.email }}</h5>
-                        <p>{{email}}</p>
+                    <div class="auth-details-button">
+                        <button type="button" class="btn btn-default" aria-label="edit">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil text-light" viewBox="0 0 16 16">
+                                <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+                            </svg>
+                        </button>
                     </div>
-                    <div id="user-password">
-                        <h5>Password</h5>
-                        <p>*****</p>
-                    </div>
-                    <button type="button" class="btn btn-default" aria-label="edit">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil text-light" viewBox="0 0 16 16">
-                            <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
-                        </svg>
-                    </button>
                 </div>
                 <div class="user-details">
                     <div id="user-birthday">
@@ -108,7 +115,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 mx-auto">
+            <div id="aspirations-container" class="col-md-5 ">
                 <h5>Goals, Dreams, and Aspirations</h5>
                 <div id="user-aspirations">
                     <p>{{aspirations}}</p>
@@ -116,7 +123,7 @@
             </div>
         </div>
     </section>
-    <div class="container">
+    <div class="container logout-button">
         <a href="{{ url_for('auth.signout') }}" 
         class="btn col-md-4 btn-lg mx-auto home-nav-button" 
         role="button">
