--- a/app/site/site_templates/index.html
+++ b/app/site/site_templates/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="m-lg-5">
         <div class="row col-md-8 gap-3 mx-auto">
-            <a href="{{ url_for('site.journal') }}" 
+            <a href="{{ url_for('api.get_entries') }}" 
                 class="btn col-md-4 btn-lg mx-auto home-nav-button" 
                 role="button">
                 Journal</a>
