--- a/app/site/site_templates/journal.html
+++ b/app/site/site_templates/journal.html
@@ -26,7 +26,7 @@
         </div> -->
 
         <div id="addbutton">
-            <a href="{{ url_for('site.addEntry') }}"
+            <a href="{{ url_for('api.create_entry') }}"
                 class="btn text-light rounded-circle p-0 m-0"
                 data-toggle="modal"
                 role="button">
